--- a/1-css-javascript/animaciones-css/index.html
+++ b/1-css-javascript/animaciones-css/index.html
@@ -9,13 +9,14 @@
 <body>
 
     <div class="container">
-        <div class="nube"></div>
-        <div class="nube"></div>
-        <div class="nube"></div>
-        <div class="nube"></div>
+        <div class="nube1"><img src="nube1-01.svg"></div>
+        <div class="nube2"><img src="nube2-01.svg"></div>
+        <div class="nube3"><img src="nube3-01.svg"></div>
         <div class="sol"></div>
-        <div class="montaña"></div>
+        <div class="sol guia"></div>
+        <div class="montaña"><img src="Montaña.svg"></div>
     </div>
     
+    <script src="app.js"></script>
 </body>
 </html>
