--- a/5-estructura-de-datos/index.html
+++ b/5-estructura-de-datos/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Películas de Acción y Comedia</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Musica</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container" id="movieContainer"></div>
-    <script src="script.js"></script>
+
+     <header class="header">
+        <h1>Musica</h1>
+    </header>
+    <div class="container"></div>
+    <div class="card">
+     <!--    <img src="https://images.genius.com/ef300d73b40f66ccc4ae2aa068c62752.1000x1000x1.png"
+alt="Imagen de la tarjeta" class="card-image">
+        <div class="card-content">
+            <h2 class="card-title">Waka Waka</h2>
+            <p class="card-description">
+                Año: 2010 <br>
+                Artista: 'Shakira' <br>
+                Género: 'Pop, Dance, </p>
+        
+        </div> -->
+    </div> 
+    <script src="bd.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
