--- a/5-estructura-de-datos/index.html
+++ b/5-estructura-de-datos/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musica</title>
-    <link rel="stylesheet" href="../css/pagina.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -24,7 +24,7 @@ alt="Imagen de la tarjeta" class="card-image">
         
         </div> -->
     </div> 
-    <script src="../js/pagina.js"></script>
-    <script src="../js/pagina2.js"></script>
+    <script src="bd.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
