--- a/8-fetch-api/index.html
+++ b/8-fetch-api/index.html
@@ -6,23 +6,20 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
+    <header class="heade">
         <form id="buscador">
-            <input type="text">
+            <input id="textoBusqueda" type="text">
             <select id="listaStatus">
-                <option value="all">All 🌐</option>
+                <option value="All">All 🌐</option>
                 <option value="Alive">Alive 🟢</option>
                 <option value="Dead">Dead 🔴</option>
-                <option value="unknown">Unknown ❔</option>
-
+                <option value="unknown">unknown ❔</option>
             </select>
             <button type="submit">Buscar</button>
         </form>
     </header>
-
-
-
     <div class="container">
+    </div>
 
     
 <!--     <script src="app.js"></script> -->
