--- a/10-proyecto-app/index.html
+++ b/10-proyecto-app/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banner</title>
+    <title>Módulos MOOC</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -21,11 +21,21 @@
             </button>
         </div>
         <div class="buttons">
-            <a href="index.html" class="button active">Inicio</a>
+            <a href="index.html" class="button">Inicio</a>
             <a href="html/nosotros.html" class="button">Nosotros</a>
-            <a href="html/modulos.html" class="button">Módulos</a>
+            <a href="html/modulos.html" class="button active">Módulos</a>
             <a href="html/ingresar.html" class="button">Ingresar</a>
         </div>
     </div>
+    
+    <section id="modulos-container">
+        <!-- Aquí se cargarán dinámicamente los módulos -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 MOOC. Todos los derechos reservados.</p>
+    </footer>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
